<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:leftPadding="@dimen/dimen_8">

    <com.wmx.android.wrstar.views.widgets.ActionBarPrimary
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImage="@mipmap/ic_back_arrow"
        app:showLeftImage="true"
        app:title="@string/forget_password" />

    <RelativeLayout
        style="@style/RegisterItem"
        android:layout_marginTop="@dimen/dimen_12">

        <EditText
            android:id="@+id/et_account"
            style="@style/EditTextAccount"
            android:drawableLeft="@mipmap/ic_account_register"
            android:drawablePadding="@dimen/common_margin_left_or_right"
            android:hint="@string/please_register_account" />

        <View
            style="@style/HorizontalDivider"
            android:layout_alignParentBottom="true"></View>
    </RelativeLayout>

    <RelativeLayout style="@style/RegisterItem">

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextPassword"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:drawableLeft="@mipmap/ic_password_register"
            android:drawablePadding="@dimen/common_margin_left_or_right"
            android:hint="@string/please_register_your_password" />

        <View
            style="@style/HorizontalDivider"
            android:layout_alignParentBottom="true"></View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_star"
            android:drawablePadding="@dimen/dimen_5"
            android:text="我们不会泄露你的任何信息噢"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_2" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/BtnYellow"
        android:layout_marginLeft="@dimen/dimen_43"
        android:layout_marginRight="@dimen/dimen_43"
        android:enabled="false"
        android:text="@string/next" />
</LinearLayout>